backenddeployment.yaml
apiVersion: apps/v1
#To test curl http://backend.demoapp.svc.cluster.local:8081/weatherbyzip
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    serviceteam: domainarchitecture
    env: dev
    service: backend
    version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
     app: backend
     serviceteam: domainarchitecture
     env: dev
     service: backend
     version: v1.0
  template:
    metadata:
      annotations:
       traffic.sidecar.istio.io/excludeOutboundPorts: "8125,8126"
       sidecar.istio.io/proxyMemory: 50M    
      labels:
       app: backend
       serviceteam: domainarchitecture
       env: dev
       service: backend
       version: v1.0
    spec:
      containers:
      - name: backendcontainer
        image: martinharnessacr.azurecr.io/demobackend:v1.0
        imagePullPolicy: Always
#       readinessProbe:
#         httpGet:
#          path: /actuator/health
#          port: 8081
#         initialDelaySeconds: 120
#         timeoutSeconds: 2
#         periodSeconds: 10
#         failureThreshold: 1
#        livenessProbe:
#         httpGet:
#          path: /actuator/health
#          port: 8081
#         initialDelaySeconds: 300
#         timeoutSeconds: 2
#         periodSeconds: 10
#         failureThreshold: 3
        command: ["java"]
        args: ["-javaagent:/opt/dd/dd-java-agent.jar", "-jar", "/opt/app/backend-v1.0.jar"]
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "250Mi"
            cpu: "300m"
          limits:
            memory: "500Mi"
            cpu: "600m"
        volumeMounts:
        - mountPath: /opt/dd
          name: datadog-java-tracer
      volumes:
      - name: datadog-java-tracer
        emptyDir: {}       
---
