backend.yaml
apiVersion: apps/v1
#To test curl http://backend.demoapp.svc.cluster.local:8081/weatherbyzip
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    serviceteam: domainarchitecture
    env: dev
    service: backend
    version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
     app: backend
     serviceteam: domainarchitecture
     env: dev
     service: backend
     version: v1.0
  template:
    metadata:
      labels:
       app: backend
       serviceteam: domainarchitecture
       env: dev
       service: backend
       version: v1.0
    spec:
      containers:
      - name: backendcontainer
        image: martinharnessacr.azurecr.io/demobackend:v1.0
        imagePullPolicy: Always
        readinessProbe:
         httpGet:
          path: /actuator/health
          port: 8081
         initialDelaySeconds: 120
         timeoutSeconds: 2
         periodSeconds: 10
         failureThreshold: 1
        livenessProbe:
         httpGet:
          path: /actuator/health
          port: 8081
         initialDelaySeconds: 300
         timeoutSeconds: 2
         periodSeconds: 10
         failureThreshold: 3
        command: ["java"]
        args: ["-javaagent:/opt/dd/dd-java-agent.jar", "-jar", "/opt/app/backend-v1.0.jar"]
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "250Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "600m"
        volumeMounts:
        - mountPath: /opt/dd
          name: datadog-java-tracer
      volumes:
      - name: datadog-java-tracer
        emptyDir: {}       
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    serviceteam: domainarchitecture
    env: dev
    service: backend
    version: v1.0
spec:
  selector:
    app: backend
    serviceteam: domainarchitecture
    env: dev
    service: backend
    version: v1.0
  ports:
  - port: 8081
    protocol: TCP
    name: http8081
---
