backendservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    serviceteam: domainarchitecture
    env: dev
    service: backend
spec:
  selector:
    app: backend
    serviceteam: domainarchitecture
    env: dev
    service: backend
  ports:
  - port: 8081
    protocol: TCP
    name: http8081
---
