frontend.yaml
apiVersion: apps/v1
#To test curl http://frontend.demoapp.svc.cluster.local:8080/weather
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    serviceteam: domainarchitecture
    env: dev
    service: frontend
    version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
     app: frontend
     serviceteam: domainarchitecture
     env: dev
     service: frontend
     version: v1.0
  template:
    metadata:
      labels:
       app: frontend
       serviceteam: domainarchitecture
       env: dev
       service: frontend
       version: v1.0
    spec:
      containers:
      - name: frontendcontainer
        image: martinharnessacr.azurecr.io/demofrontend:v1.0
        imagePullPolicy: Always
        readinessProbe:
         httpGet:
          path: /actuator/health
          port: 8080
         initialDelaySeconds: 120
         timeoutSeconds: 2
         periodSeconds: 10
         failureThreshold: 1
        livenessProbe:
         httpGet:
          path: /actuator/health
          port: 8080
         initialDelaySeconds: 180
         timeoutSeconds: 2
         periodSeconds: 10
         failureThreshold: 3   
        command: ["java"]
        args: ["-javaagent:/opt/dd/dd-java-agent.jar", "-jar", "/opt/app/frontend-v1.0.jar"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "250Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "400m"
        volumeMounts:
        - mountPath: /opt/dd
          name: datadog-java-tracer
      volumes:
      - name: datadog-java-tracer
        emptyDir: {}       
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    serviceteam: domainarchitecture
    env: dev
    service: frontend
    version: v1.0
spec:
  selector:
    app: frontend
    serviceteam: domainarchitecture
    env: dev
    service: frontend
    version: v1.0
  ports:
  - port: 8080
    protocol: TCP
    name: http8080
---
