frontendservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    serviceteam: domainarchitecture
    env: dev
    service: frontend
spec:
  selector:
    app: frontend
    serviceteam: domainarchitecture
    env: dev
    service: frontend
  ports:
  - port: 8080
    protocol: TCP
    name: http8080
---
