backendvirtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - match:
    - uri:
       exact: /weatherbyzip
    route:
    - destination:
        host: backend
        port:
          number: 8081
---
