frontenddestinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: v10
    labels:
      version: "v1.0"
  - name: v11
    labels:
      version: "v1.1"
---
